@@ -2,6 +2,7 @@ Rosario Student Information System - CHANGES
 
 Changes in 2.8.15
 -----------------
+- 2015-2016 School Year update in rosariosis.sql & config.inc.sample.php
 - Add Course Period Absences Widget in Widgets.fnc.php sponsored by Hisham Abu Dawoud
 - Add Balance field to Advanced Report in Export.php sponsored by LM Idiomes
 - Add focus to username field in index.php
